refactor: refactor bots